--- a/Ingredientes.html
+++ b/Ingredientes.html
@@ -20,6 +20,6 @@
   </main>
 
   <script src="js/Global.js"></script>
-  <script src="js/ingredientes.js"></script>
+  <script src="js/Ingredientes.js"></script>
 </body>
 </html>
